@@ -495,6 +495,8 @@ namespace
 // Gui_settings -->
 	Gui_settings::Gui_settings(void)
 	:
+		show_speed_in_window_title(false),
+
 		show_toolbar(true),
 		toolbar_style(m::gtk::toolbar::DEFAULT),
 
@@ -514,7 +516,12 @@ namespace
 			const libconfig::Setting& setting = config_root[i];
 			const char* setting_name = setting.getName();
 
-			if(m::is_eq(setting_name, "show_toolbar"))
+			if(m::is_eq(setting_name, "show_speed_in_window_title"))
+			{
+				CHECK_OPTION_TYPE(setting, libconfig::Setting::TypeBoolean, continue)
+				this->show_speed_in_window_title = setting;
+			}
+			else if(m::is_eq(setting_name, "show_toolbar"))
 			{
 				CHECK_OPTION_TYPE(setting, libconfig::Setting::TypeBoolean, continue)
 				this->show_toolbar = setting;
@@ -601,6 +608,8 @@ namespace
 
 	void Gui_settings::write_config(libconfig::Setting& config_root) const
 	{
+		config_root.add("show_speed_in_window_title", libconfig::Setting::TypeBoolean) = this->show_speed_in_window_title;
+
 		config_root.add("show_toolbar", libconfig::Setting::TypeBoolean) = this->show_toolbar;
 		config_root.add("toolbar_style", libconfig::Setting::TypeString) = m::gtk::toolbar::get_style_string_representation(this->toolbar_style);
 
